# SwipeMatch

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/endpoints/: interest.py  preference.py  user.py
app/config/: database.py  exceptions.py  logging_conf.py  settings.py
app/core/: dependencies.py
app/dependencies/: repository.py  service.py  user.py
app/models/: user_models.py
app/models/data/: interest_load_json.py  interests_fixture.json
app/repository/: base_repository.py  interest.py  preference.py  user_repository.py
app/schemas/: user_schemas.py
app/services/: interest.py  preference.py  user_services.py
app/users/: models.py  repository.py  router.py  schemas.py
app/validators/: user.py
migrations/: env.py
migrations/versions/: 086cef69a851_.py  295f91eb0af1_.py  3f88f1361316_edit_many_to_many_relationships.py  5c0e96015cad_insert_initial_values_into_interest_.py  a89401046d4f_insert_initial_values_into_interest_.py  a8f913de66d7_set_unique_constraint_on_name_column.py  cba473cefac0_initial_database_setup.py  f78b8a0bd580_.py  fe5946f72033_.py
